# pursuedpybear

./: .cirrus.yml  .common.sh  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  CodeofConduct.md  LICENSE  LICENSE.txt  MANIFEST  README.md  ROADMAP.md  TODO.md  appveyor.yml  bors.toml  lint.sh  main.py  pyproject.toml  requirements-docs.txt  requirements-lint.txt  requirements-tests.txt  requirements-upload.txt  requirements.txt  scratch.csv  scratch.py  setup.cfg  setup.py
.ci/: install-debian-deps.sh  install-wheels.py  upload.xsh
.ci/dockerfiles/: .common.sh  docs  generate.sh  pypy_3.6-slim  python_3.6-slim  python_3.6-windowsservercore-1809  python_3.7-slim  python_3.7-windowsservercore-1809  python_3.8-rc-slim  template.Dockerfile
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: greetings.yml  hacktoberfest.yml
.test-venv/: pip-selfcheck.json  pyvenv.cfg
.upload-scripts/: README.md  env-build.sh  test-upload.sh
docs/: architecture.rst  clocks.rst  conf.py  events.rst  getting-started.rst  index.rst  scenes.rst  sprites.rst  starting.rst  what.html
docs/_static/: center.css
docs/discussion/: assets.rst  default-branch.rst  index.rst  maintenance-schedules.rst
docs/features/: animation.rst
docs/howto/: index.rst  keywordconfig.rst  use-latest.rst
docs/reference/: assets.rst  camera.rst  deprecations.rst  directions.rst  engine.rst  events.rst  flags.rst  gom.rst  index.rst  scenes.rst  sound.rst  sprites.rst  text.rst
docs/tutorials/: index.rst
examples/: README.md  animated_sprite.py  framecount.py  hugs.py  main_loop_stats.py  targets.py  targets_with_twisted.py  three_body.py  utils.py
examples/RectangleSprite/: README.md  rectangle_sprite_ex.py
examples/animated_sprites/: README.md  animated_sprite.py
examples/external_event_loop_integration/: README.md  requirements.txt  targets_with_twisted.py
examples/frame_count/: README.md  framecount.py
examples/getting-started-sample/: README.md  main.py
examples/keyboard_and_mouse_controls/: README.md  targets.py
examples/loading_screen/: README.md  main.py
examples/rectangular_assets/: main.py
examples/two-phase-updates/: README.md  three_body.py
examples/zombies/: run_game.py  zombies.py
lightning/: lightning.py
pip-wheel-metadata/ppb.dist-info/: METADATA  top_level.txt
ppb/: __init__.py  abc.py  assetlib.py  assets.py  buttons.py  camera.py  changelib.py  contexts.py  controller.py  dataclasses.py  directions.py  engine.py  errors.py  event.py  eventlib.py  events.py  fields.py  flags.py  gomlib.py  keycodes.py  mouse.py  physics.py  resources.py  scenes.py  shell.py  sprites.py  systems.py  systemslib.py  testutils.py  textsprite.py  utilities.py  utils.py  vector.py  vfs.py  view.py  vmath.py
ppb/components/: __init__.py  controls.py  models.py  view.py
ppb/debug/: sdlinfo.py
tests/: conftest.py  test_animation.py  test_assets.py  test_camera.py  test_changelib.py  test_colliders.py  test_default_sprites.py  test_engine.py  test_events.py  test_fauxfloat.py  test_fields.py  test_flags.py  test_gom.py  test_gomlib.py  test_layering.py  test_mouse.py  test_scenes.py  test_sprites.py  test_system_utils.py  test_systems.py  test_testutil.py  test_twophase.py  test_vfs.py  utils.py
viztests/: README.md  __main__.py  angles.py  layering.py  loading.py  main.py  primitive-rotation.py  primitive_assets.py  rectangles.py  show_cursor.py  sound_flooded_channels.py  sound_manager.py  soundonly.py  text.py  text_shared_font.py  triangles.py
(+76 files in other folders)
