[aliases]
test = pytest

[metadata]
name = ppb
author = Piper Thunstrom
author_email = pathunstrom@gmail.com
description = An Event Driven Python Game Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ppb/pursuedpybear
license = Artistic-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: Artistic License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages =
    ppb
    ppb.systems
    ppb.features

setup_requires =
    pytest-runner
    wheel
    setuptools_scm

python_requires = >= 3.6
